edition = "2023";

package wayplatform.connect.trusttrack.v1;

import "google/protobuf/timestamp.proto";

// A coordinate.
message Coordinate {
  // The number of satellites used to calculate the coordinate.
  int32 satellites_count = 3;

  // The latitude of the coordinate.
  double latitude = 1;

  // The longitude of the coordinate.
  double longitude = 2;

  // The altitude of the coordinate.
  double altitude = 4;

  // The speed of the coordinate.
  double speed = 5;

  // The direction of the coordinate.
  double direction = 6;

  // The datetime of the coordinate.
  google.protobuf.Timestamp time = 7;

  // The last valid GPS datetime of the coordinate.
  google.protobuf.Timestamp last_valid_gps_time = 8;

  // The server datetime of the coordinate.
  google.protobuf.Timestamp server_time = 9;
}
